--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ package-mode = false
 explicit_package_bases = true
 
 
+[tool.black]
+line-length = 79
+target-version = ['py312']
+
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
